Implement basic canvas animation loop in js/app.js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Splash Screen - Stage 1</title>
+  <title>Splash Screen - Stage 2</title>
 </head>
 <body>
   <div class="splash__screen">
-    <!-- Splash container -->
+    <canvas class="hero__canvas"></canvas>
   </div>
   <script src="js/app.js"></script>
 </body>
