--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Splash Screen - Stage 2</title>
+  <title>Splash Screen - Stage 4</title>
 </head>
 <body>
   <div class="splash__screen">
     <canvas class="hero__canvas"></canvas>
   </div>
-  <script src="js/app.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
