--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </section>
     
 
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
